<resources>
    <string name="app_name">ImageCropper</string>
    <string name="select_picture">Select Picture</string>
    <string name="analyze">Analyze</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="empty_image">please select image first</string>
    <string name="failed_to_create_classifier">Failed to create classifier.</string>

    //firebase material
    <string name="login_menu_item">Log in</string>
    <string name="verified_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="unverified_profile">My Profile (Unverified)</string>
    <string name="settings">Settings</string>
    <string name="classify">Classify</string>
    <string name="gallery">Gallery</string>
    <string name="logout_menu_item">Sign out</string>
    <string name="welcome_on_signin">Congratulations! you have successfully signed in.</string>
    <string name="default_nouser_signin">No user signed in currently.</string>
    <string name="login_failed">Log in cancelled!</string>
    <string name="login_success">Log in successful.</string>
    <string name="logout_success">Successfully logged out</string>
    <string name="logout_failed">Failed to log out</string>
    <string name="login_unknown_Error">Unknown error while logging in. Please Try again</string>
    <string name="no_connectivity">There is no internet connection. Please try again</string>
    <string name="error_firestore_init_db">There is no firestore database</string>

    <string-array name="imagePicker">
        <item>From Gallery</item>
        <item>From Camera</item>
    </string-array>


    <string name="prediction">Prediction</string>
    <string name="probability">Probability</string>
    <string name="empty">--</string>
</resources>
