<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/primary"
        android:id="@+id/toolbarMain"/>

    <!--android:layout_width="300dp" android:layout_height="300dp"-->
    <spartons.com.imagecropper.customViews.MyCircleImageView
        android:id="@+id/imageView"
        android:layout_width="299dp"
        android:layout_height="299dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_launcher_background"
        app:civ_border_color="#BDBDBD"
        app:civ_border_width="0.5dp" />

    <Button
        android:id="@+id/selectPictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/select_picture" />

    <Button
        android:id="@+id/analyzeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectPictureButton"
        android:layout_centerInParent="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:text="@string/analyze" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>

            <TextView
                style="@style/ResultText"
                android:text="@string/probability"/>

            <TextView
                style="@style/ResultText"
                android:text="@string/prediction"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_probability"
                style="@style/ResultText"
                android:textColor="@android:color/black"
                android:text="@string/empty"
                tools:text="0.9"/>


            <TextView
                android:id="@+id/tv_prediction"
                style="@style/ResultText"
                android:textColor="@android:color/black"
                android:text="@string/empty"
                tools:text="1"/>

        </TableRow>
    </TableLayout>
    <!--@tmp-->
    <ImageView
        android:id="@+id/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:layout_below="@+id/analyzeButton"
        android:layout_centerInParent="true"
        />
    <!--@tmp-->
</RelativeLayout>