<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/primary"
        android:id="@+id/toolbarMain"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>

            <TextView
                style="@style/ResultText"
                android:text="@string/probability"/>

            <TextView
                style="@style/ResultText"
                android:text="@string/prediction"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_probability"
                style="@style/ResultText"
                android:textColor="@android:color/black"
                android:text="@string/empty"
                tools:text="0.9"/>


            <TextView
                android:id="@+id/tv_prediction"
                style="@style/ResultText"
                android:textColor="@android:color/black"
                android:text="@string/empty"
                tools:text="1"/>

        </TableRow>
    </TableLayout>
</RelativeLayout>
